{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 216,
  "lineage": "707edd61-55f4-7989-a949-634f9e3ab5e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045f9c1ecb56d9532",
            "arn": "arn:aws:ec2:ap-southeast-1:774305578623:instance/i-0dd93c8307ad61cfb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdi",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-025f54962e30a4048",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd93c8307ad61cfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private-ec2-public-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a086053f913ea411",
            "private_dns": "ip-10-0-0-20.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-080bef1895aeb7dbc",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bcb5f1be3205b860"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012457b3130338c28",
            "tags": {
              "Costcenter": "devops2402",
              "Name": "cau-private-ec2-Dec2"
            },
            "tags_all": {
              "Costcenter": "devops2402",
              "Name": "cau-private-ec2-Dec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bcb5f1be3205b860"
            ]
          },
          "dependencies": [
            "aws_key_pair.private-ec2-key-pair",
            "aws_security_group.securitygr-private-ec2",
            "aws_subnet.cau-private-subnet-Dec2-1",
            "aws_vpc.cau-vpc-Dec2-1",
            "data.aws_ami.ubuntu",
            "tls_private_key.private-ec2-key-pair-generator"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045f9c1ecb56d9532",
            "arn": "arn:aws:ec2:ap-southeast-1:774305578623:instance/i-05e648684daa1f024",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e648684daa1f024",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public-ec2-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb87b20c9a0422c2",
            "private_dns": "ip-10-0-0-4.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.4",
            "public_ip": "47.129.178.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07835f7684b557b41",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04036ba2059f2e3ae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d53dec704f1041f0",
            "tags": {
              "Costcenter": "devops2402",
              "Name": "cau-public-ec2-Dec2"
            },
            "tags_all": {
              "Costcenter": "devops2402",
              "Name": "cau-public-ec2-Dec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04036ba2059f2e3ae"
            ]
          },
          "dependencies": [
            "aws_key_pair.public-ec2-key-pair",
            "aws_security_group.securitygr-public-ec2",
            "aws_subnet.cau-public-subnet-Dec2-1",
            "aws_vpc.cau-vpc-Dec2-1",
            "data.aws_ami.ubuntu",
            "tls_private_key.public-ec2-key-pair-generator"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cau-internetgw-Dec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:774305578623:internet-gateway/igw-05a8c10289688e106",
            "id": "igw-05a8c10289688e106",
            "owner_id": "774305578623",
            "tags": {
              "Costcenter": "devops2402",
              "Name": "cau-internetgw-Dec2"
            },
            "tags_all": {
              "Costcenter": "devops2402",
              "Name": "cau-internetgw-Dec2"
            },
            "vpc_id": "vpc-0d1c3df04231b05fa"
          },
          "dependencies": [
            "aws_vpc.cau-vpc-Dec2-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cau-private-routetb-Dec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:774305578623:route-table/rtb-0d184516ec40c554a",
            "id": "rtb-0d184516ec40c554a",
            "owner_id": "774305578623",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Costcenter": "devops2402",
              "Name": "cau-private-routetb-Dec2"
            },
            "tags_all": {
              "Costcenter": "devops2402",
              "Name": "cau-private-routetb-Dec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1c3df04231b05fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cau-vpc-Dec2-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cau-public-routetb-Dec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:774305578623:route-table/rtb-0516c8f683ab3d137",
            "id": "rtb-0516c8f683ab3d137",
            "owner_id": "774305578623",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a8c10289688e106",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Costcenter": "devops2402",
              "Name": "cau-public-routetb-Dec2"
            },
            "tags_all": {
              "Costcenter": "devops2402",
              "Name": "cau-public-routetb-Dec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1c3df04231b05fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cau-internetgw-Dec2",
            "aws_vpc.cau-vpc-Dec2-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beb04125874d7472",
            "route_table_id": "rtb-0d184516ec40c554a",
            "subnet_id": "subnet-012457b3130338c28"
          },
          "dependencies": [
            "aws_route_table.cau-private-routetb-Dec2",
            "aws_subnet.cau-private-subnet-Dec2-1",
            "aws_vpc.cau-vpc-Dec2-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05de3270397673b15",
            "route_table_id": "rtb-0516c8f683ab3d137",
            "subnet_id": "subnet-0d53dec704f1041f0"
          },
          "dependencies": [
            "aws_internet_gateway.cau-internetgw-Dec2",
            "aws_route_table.cau-public-routetb-Dec2",
            "aws_subnet.cau-public-subnet-Dec2-1",
            "aws_vpc.cau-vpc-Dec2-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygr-private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:774305578623:security-group/sg-0bcb5f1be3205b860",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/26"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bcb5f1be3205b860",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/26"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "securitygr-private-ec2",
            "name_prefix": "",
            "owner_id": "774305578623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Costcenter": "devops2402"
            },
            "tags_all": {
              "Costcenter": "devops2402"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1c3df04231b05fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cau-vpc-Dec2-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygr-public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:774305578623:security-group/sg-04036ba2059f2e3ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04036ba2059f2e3ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "42.113.60.161/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "securitygr-public-ec2",
            "name_prefix": "",
            "owner_id": "774305578623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Costcenter": "devops2402"
            },
            "tags_all": {
              "Costcenter": "devops2402"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1c3df04231b05fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cau-vpc-Dec2-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cau-private-subnet-Dec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:774305578623:subnet/subnet-012457b3130338c28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012457b3130338c28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "774305578623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Costcenter": "devops2402",
              "Name": "cau-private-subnet-Dec2-1"
            },
            "tags_all": {
              "Costcenter": "devops2402",
              "Name": "cau-private-subnet-Dec2-1"
            },
            "vpc_id": "vpc-0d1c3df04231b05fa"
          },
          "dependencies": [
            "aws_vpc.cau-vpc-Dec2-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cau-public-subnet-Dec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:774305578623:subnet/subnet-0d53dec704f1041f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d53dec704f1041f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774305578623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Costcenter": "devops2402",
              "Name": "cau-public-subnet-Dec2-1"
            },
            "tags_all": {
              "Costcenter": "devops2402",
              "Name": "cau-public-subnet-Dec2-1"
            },
            "vpc_id": "vpc-0d1c3df04231b05fa"
          },
          "dependencies": [
            "aws_vpc.cau-vpc-Dec2-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cau-vpc-Dec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:774305578623:vpc/vpc-0d1c3df04231b05fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/26",
            "default_network_acl_id": "acl-0af2fd44be194f515",
            "default_route_table_id": "rtb-02eb814248d500585",
            "default_security_group_id": "sg-0d50ed4cc9cb5a75f",
            "dhcp_options_id": "dopt-00fc7e821a9acd6e7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1c3df04231b05fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02eb814248d500585",
            "owner_id": "774305578623",
            "tags": {
              "Costcenter": "devops2402",
              "Name": "cau-vpc-Dec2-1"
            },
            "tags_all": {
              "Costcenter": "devops2402",
              "Name": "cau-vpc-Dec2-1"
            }
          }
        }
      ]
    }
  ]
}